--- a/action.yaml
+++ b/action.yaml
@@ -7,4 +7,4 @@ outputs:
     description: 'The name of the label applied to the PR'
 runs:
   using: 'node12'
-  main: 'index.js'
+  main: 'dist/index.js'
