--- a/action.yaml
+++ b/action.yaml
@@ -1,12 +1,16 @@
 name: 'Get pull request body'
 description: 'Return the body of a pull request'
 outputs:
-  pr_body: 
-    description: 'The comment of the PR'
+  project_name: 
+    description: 'The name of the github repo'
   label:
     description: 'The name of the label applied to the PR'
   team_name:
     description: 'Team name opening PR'
+  release_description:
+    description: 'Release description'
+  release_version:
+    description: 'The version of the release to start'
 runs:
   using: 'node12'
   main: 'dist/index.js'
