--- a/action.yaml
+++ b/action.yaml
@@ -1,18 +1,13 @@
-name: 'Get pull request body'
-description: 'Return the body of a pull request'
-outputs:
-  project_name: 
-    description: 'The name of the github repo'
-  label:
-    description: 'The name of the label applied to the PR'
-  team_name:
-    description: 'Team name opening PR'
-  release_description:
-    description: 'Release description'
-  release_version:
-    description: 'The version of the release to start'
-  pr_link:
-    description: 'Link to the PR'
+name: 'Create draft release'
+description: 'Creates releases notes from PR commit messages, bumps release version number, creates draft release, updates PR with generated info'
+inputs:
+  team-name:
+    description: 'Team name to be added while updating PR'
+    required: false
+    default: 'Your Team Name'
+  repo-token:
+    description: 'Github token used to access github api. usually secrets.GITHUB_TOKEN'
+    required: true
 runs:
   using: 'node12'
   main: 'dist/index.js'
