--- a/action.yaml
+++ b/action.yaml
@@ -1,6 +1,9 @@
 name: 'Delete draft release'
 description: 'Deletes the most recent draft release (if any)'
-
+inputs:
+  repo-token:
+    description: 'Github token used to access github api. usually secrets.GITHUB_TOKEN'
+    required: true
 runs:
   using: 'node12'
   main: 'dist/index.js'
