--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@actions/core": "^1.2.6",
     "@actions/github": "^4.0.0",
+    "@octokit/auth-token": "^2.5.0",
     "@octokit/request": "^5.6.3"
   }
 }
