--- a/action.yaml
+++ b/action.yaml
@@ -2,7 +2,10 @@ name: 'Update topics from pom'
 description: 'Updates topics reading from the pom in the root'
 inputs:
   repo-token:
-    description: 'Github token used to access github api. usually secrets.GITHUB_TOKEN'
+    description: 'Github token used to access github api with writing permissions. should be secrets.WRITING'
+    required: true
+  path:
+    description: 'File path with the topics to read'
     required: true
 runs:
   using: 'node12'
