--- a/action.yaml
+++ b/action.yaml
@@ -7,6 +7,9 @@ inputs:
   path:
     description: 'path to topics file'
     required: true
+  replace:
+    description: 'Boolean to delete the old topics or to keep them'
+    required: false
 runs:
   using: 'node12'
   main: 'dist/index.js'
