--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@actions/core": "^1.2.6",
     "@actions/github": "^4.0.0",
     "@octokit/auth-token": "^2.5.0",
-    "@octokit/request": "^5.6.3"
+    "@octokit/request": "^5.6.3",
+    "xml2js": "^0.4.23"
   }
 }
