--- a/action.yaml
+++ b/action.yaml
@@ -7,7 +7,7 @@ inputs:
   paths:
     description: 'path(s) to topics file'
     required: true
-  replace-topics:
+  replace:
     description: 'Boolean to delete the old topics or to keep them'
     required: false
     default: false
