--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "# NOTE: this is a public repository",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --reporter list"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,7 @@
     "@actions/github": "^4.0.0",
     "@octokit/auth-token": "^2.5.0",
     "@octokit/request": "^5.6.3",
+    "mocha": "^10.0.0",
     "xml2js": "^0.4.23"
   }
 }
